2001-05-03  Rob Savoye  <rob@peggyo.welcomehome.org>

	* testsuite/libdejagnu: New directory for dejagnu library test
	cases.
	* testsuite/libdejagnu/unit.cc: Test case for dejagnu.h.
	* testsuite/libdejagnu/tunit.exp: Test driver for dejagnu.h.
	* testsuite/libdejagnu/Makefile.am: New makefile to build the test
	case.
	* testsuite/libdejagnu/Makefile.in: Generated.
	* testsuite/Makefile.am: Add libdejagnu to SUBDIRS. Replace the
	site.exp rule, cause we don't want the $tool setting, so we run
	all the test suites. Don't pass the tool name for "make check".
	* configure.in: Add testsuite/libdejagnu/Makefile to AC_OUTPUT.
	
2001-05-02  Rob Savoye  <rob@peggyo.welcomehome.org>

	* Makefile.am: Rename dist2 to tarball target. Fix the version
	number to have the minor release too.
	* doc/Makefile.am: Convert all paths from relative to absolute,
	cause not all verions of the db2* tools can work with a relative
	path.
	* redhat/dejagnu.spec: Update version number, and install
	dejagnu.h.
	* debian/changelog: Update version number.
	* debian/rules: and install dejagnu.h

2001-05-01  Matt Hiller  <hiller@redhat.com>
  
        * lib/libgloss.exp (get_multilibs): Correction to Catherine
        Moore's patch of 2000-06-09.

2001-04-11  Rob Savoye  <rob@slipknot.welcomehome.org>

	* Clean.tcl: Add -r to rm, so it gets rid of CVS directories.
	* .clean: Don't install the debian or redhat packaging directories.
	* Makefle.am: Install dejagnu.h. Fix dist2 target, so we build our
	own tarballs, instead of letting automake do it for us.
	* examples/calc/Makefile.am: Use noist_PROGRAMS, so calc doesn't
	get installed.
	* doc/Makefile.am: Install the man page for runtest.
	* configure.in: Make VERSION 1.4.0, not just 1.4, so distributions
	get built right.

2001-04-07  Rob Savoye  <rob@blackpeter.welcomehome.org>

	* lib/dejagnu.exp: Test driver for embedded DejaGnu API.
	* dejagnu.h: Embedded DejaGnu API main header file.