@@ -1,0 +1,36 @@
+#   Copyright (C) 2001 Free Software Foundation, Inc.
+
+# This program is free software; you can redistribute it and/or modify
+# it under the terms of the GNU General Public License as published by
+# the Free Software Foundation; either version 2 of the License, or
+# (at your option) any later version.
+# 
+# This program is distributed in the hope that it will be useful,
+# but WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+# GNU General Public License for more details.
+# 
+# You should have received a copy of the GNU General Public License
+# along with this program; if not, write to the Free Software
+# Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.  
+
+# Please email any bugs, comments, and/or additions to this file to:
+# bug-dejagnu@prep.ai.mit.edu
+
+# This file was written by Rob Savoye. (rob@welcomehome.org)
+
+proc ${tool}_version { } {
+    verbose "WARNING: Using the default proc for tool_version" 2
+}
+
+proc ${tool}_exit {} {
+    verbose "WARNING: Using the default proc for tool_exit" 2
+}
+
+proc ${tool}_start { } {
+    global spawn_id
+
+    verbose "WARNING: Using the default proc for tool_start" 2
+    return $spawn_id
+}
+
